--- a/pintd.ini
+++ b/pintd.ini
@@ -1,6 +1,5 @@
 [pintd]
 AppMode = debug
-MaxRedirects = 1024
 LogFile = /var/log/pintd.log
 
 # parent section
@@ -12,6 +11,7 @@ localaddr  = 0.0.0.0         # listen address (your ip address), like 127.0.0.1,
 localport  = 8888            # listen port
 remoteaddr = 127.0.0.1       # redirect to address.
 remoteport = 80              # redirect to port
+maxredirects = 100           # maximum number of redirect connections, default 100.
 denyaddrs = 123.34.77.0/24, 127.0.0.1   # deny address to request pintd.
 
 [redirect.test2]
@@ -19,4 +19,5 @@ localaddr  = 0.0.0.0
 localport  = 8080
 remoteaddr = 127.0.0.1
 remoteport = 22
+maxredirects = 2
 denyaddrs = 127.0.0.1
