--- a/pintd.ini
+++ b/pintd.ini
@@ -7,17 +7,33 @@ LogFile = /var/log/pintd.log
 
 # child section.
 [redirect.test]
+proto = tcp                  # protocol tcp or udp, default tcp.
 localaddr  = 0.0.0.0         # listen address (your ip address), like 127.0.0.1, 192.168.122.10 ....
 localport  = 8888            # listen port
 remoteaddr = 127.0.0.1       # redirect to address.
 remoteport = 80              # redirect to port
-maxredirects = 100           # maximum number of redirect connections, default 100.
+maxredirects = 100           # maximum number of redirect connections, default 100. (only valid for tcp).
 denyaddrs = 123.34.77.0/24, 127.0.0.1   # deny address to request pintd.
 
 [redirect.test2]
+proto = tcp
 localaddr  = 0.0.0.0
 localport  = 8080
 remoteaddr = 127.0.0.1
 remoteport = 22
 maxredirects = 2
 denyaddrs = 127.0.0.1
+
+[redirect.test3]
+proto = udp
+localaddr  = 0.0.0.0
+localport  = 9999
+remoteaddr = 127.0.0.1
+remoteport = 9090
+
+[redirect.test4]
+proto = tcp
+localaddr  = 0.0.0.0
+localport  = 9999
+remoteaddr = 127.0.0.1
+remoteport = 9090
