Perfect README. Change TODO list.

--- a/pintd.ini
+++ b/pintd.ini
@@ -2,18 +2,16 @@
 AppMode = debug
 LogFile = /var/log/pintd.log
 
-# parent section
 [redirect]
 
-# child section.
 [redirect.test]
-proto = tcp                  # protocol tcp or udp, default tcp.
-localaddr  = 0.0.0.0         # listen address (your ip address), like 127.0.0.1, 192.168.122.10 ....
-localport  = 8888            # listen port
-remoteaddr = 127.0.0.1       # redirect to address.
-remoteport = 80              # redirect to port
-maxredirects = 100           # maximum number of redirect connections, default 100. (only valid for tcp).
-denyaddrs = 123.34.77.0/24, 127.0.0.1   # deny address to request pintd.
+proto = tcp 
+localaddr  = 0.0.0.0
+localport  = 8888
+remoteaddr = 127.0.0.1
+remoteport = 80
+maxredirects = 100
+denyaddrs = 123.34.77.0/24, 127.0.0.1
 
 [redirect.test2]
 proto = tcp
