支持白名单

--- a/pintd.ini
+++ b/pintd.ini
@@ -20,14 +20,15 @@ localport  = 8080
 remoteaddr = 127.0.0.1
 remoteport = 22
 maxredirects = 2
-denyaddrs = 127.0.0.1
+admitaddrs = 221.0.0.0/8,127.0.0.1
+denyaddrs = 221.218.212.223
 
 [redirect.test3]
 proto = udp
 localaddr  = 0.0.0.0
 localport  = 9999
 remoteaddr = 127.0.0.1
-remoteport = 9090
+remoteport = 9091
 
 [redirect.test4]
 proto = tcp
