增加对进程可打开文件数量的设置

--- a/pintd.ini
+++ b/pintd.ini
@@ -1,6 +1,7 @@
 [pintd]
-AppMode = debug
-LogFile = /var/log/pintd.log
+appmode = debug
+logfile = /var/log/pintd.log
+maxopenfiles = 8192
 
 [redirect]
 
