初步实现Nodelay功能, 对于非Nodelay模式还存在Bug

--- a/pintd.ini
+++ b/pintd.ini
@@ -19,10 +19,11 @@ proto = tcp
 localaddr  = 0.0.0.0
 localport  = 8080
 remoteaddr = 127.0.0.1
-remoteport = 22
+remoteport = 8889
 maxredirects = 2
-admitaddrs = 221.0.0.0/8,127.0.0.1
-denyaddrs = 221.218.212.223
+nodelay = false
+#admitaddrs = 221.0.0.0/8,127.0.0.1
+#denyaddrs = 221.218.212.223
 
 [redirect.test3]
 proto = udp
