--- a/pintd.ini
+++ b/pintd.ini
@@ -19,9 +19,9 @@ proto = tcp
 localaddr  = 0.0.0.0
 localport  = 8080
 remoteaddr = 127.0.0.1
-remoteport = 8889
-maxredirects = 2
-nodelay = false
+remoteport = 22
+maxredirects = 10
+nodelay = true
 #admitaddrs = 221.0.0.0/8,127.0.0.1
 #denyaddrs = 221.218.212.223
 
